App working without db

--- a/src/global.css
+++ b/src/global.css
@@ -252,6 +252,10 @@ button.input-icon:hover {
   background-color: transparent;
 }
 
+.task-icon-img_dots:disabled:active {
+  transform: scale(0.95);
+}
+
 .task-icon-img_dots img {
   width: 2.2rem;
 }
@@ -273,6 +277,23 @@ button.input-icon:hover {
   border: 0.1rem solid rgba(0, 0, 0, 0.2);
   border-radius: 0.5rem;
   box-shadow: 0.3rem 0.3rem 0.3rem 0 rgba(0, 0, 0, 0.15);
+  animation: popUp 200ms linear;
+}
+
+@keyframes popUp {
+  0% {
+    opacity: 0;
+    transform: scale(0);
+    right: 0;
+  }
+  50% {
+    transform: scale(1.1);
+  }
+  100% {
+    opacity: 1;
+    transform: scale(1);
+    right: 5;
+  }
 }
 
 .backdrop {
